updates for header contacts and for viewport 320

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="./index.html" class="link logo"
             >Web<span class="logo-part">Studio</span></a
           >
-          <ul class="list nav">
+          <ul class="list nav menu-container menu-tab">
             <li class="list-item">
               <a class="link nav-item current" href="./index.html">Studio</a>
             </li>
