--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           <a href="./index.html" class="link logo"
             >Web<span class="logo-part">Studio</span></a
           >
-          <ul class="list nav">
+          <ul class="list nav menu-container menu-tab">
             <li class="list-item">
               <a class="link nav-item" href="./index.html">Studio</a>
             </li>
@@ -234,13 +234,13 @@
                         ./images/portfolio/cash-tab-2x.jpg 2x,
                         ./images/portfolio/cash-tab-1x.jpg 1x
                       "
-                      media="(min-width: 768px)" />
+                      media="(min-width: 767px)" />
                     <source
                       srcset="
                         ./images/portfolio/cash-mob-2x.jpg 2x,
                         ./images/portfolio/cash-mob-1x.jpg 1x
                       "
-                      media="(max-width: 767px)" />
+                      media="(max-width: 768px)" />
                     <img
                       src="./images/portfolio/cashless-payement.jpg"
                       alt="mobile site"
