--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 >info@devstudio.com</a
               >
             </li>
-            <li class="">
+            <li class="phone">
               <a href="tel:+110001111111" class="link contact-link"
                 >+11 (000) 111-11-11</a
               >
